--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,7 @@
         "php": ">=5.6.4",
         "laravel/lumen-framework": "5.3.*",
         "vlucas/phpdotenv": "~2.2",
-        "kriswallsmith/assetic": "^1.3",
-        "leafo/lessphp": "^0.5.0"
+        "oyejorge/less.php": "v1.7.0.10"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
