--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,5 @@
 {
-    "name": "laravel/lumen",
-    "description": "The Laravel Lumen Framework.",
-    "keywords": ["framework", "laravel", "lumen"],
+    "name": "fridaylabs/argentum",
     "license": "MIT",
     "type": "project",
     "repositories": [
@@ -14,7 +12,8 @@
         "php": ">=5.6.4",
         "laravel/lumen-framework": "5.3.*",
         "vlucas/phpdotenv": "~2.2",
-        "oyejorge/less.php": "v1.7.0.10"
+        "mrclay/minify": "^2.3",
+        "mishal/iless": "^2.2"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
