--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,8 @@
     "name": "fridaylabs/argentum",
     "license": "MIT",
     "type": "project",
+    "minimum-stability": "dev",
+    "prefer-stable": true,
     "repositories": [
         {
             "type": "composer",
@@ -11,10 +13,12 @@
     "require": {
         "php": ">=5.6.4",
         "laravel/lumen-framework": "5.3.*",
+        "wikimedia/composer-merge-plugin": "^1.3",
         "vlucas/phpdotenv": "~2.2",
         "mrclay/minify": "^2.3",
         "mishal/iless": "^2.2",
-        "bower-asset/normalize.css": "^5.0"
+        "bower-asset/normalize.css": "^5.0",
+        "symfony/process": "^3.1"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
@@ -22,6 +26,7 @@
         "mockery/mockery": "~0.9"
     },
     "autoload": {
+        "files": ["app/helpers.php"],
         "psr-4": {
             "App\\": "app/"
         }
@@ -37,6 +42,16 @@
             "php -r \"copy('.env.example', '.env');\""
         ]
     },
-    "minimum-stability": "dev",
-    "prefer-stable": true
+    "extra": {
+        "merge-plugin": {
+            "include": [
+                "app/Extensions/*/composer.json"
+            ],
+            "recurse": true,
+            "replace": false,
+            "merge-dev": true,
+            "merge-extra": false,
+            "merge-extra-deep": false
+        }
+    }
 }
