--- a/app/Extensions/AdminExtension/package.json
+++ b/app/Extensions/AdminExtension/package.json
@@ -1,7 +1,8 @@
 {
   "dependencies": {
     "bulma": "^0.2.3",
-    "rollup": "^0.36.3",
-    "vue": "^2.0.3"
+    "vue": "^2.0.3",
+    "vue-router": "^2.0.1",
+    "vueify": "^9.2.4"
   }
 }
