--- a/.env.example
+++ b/.env.example
@@ -10,5 +10,6 @@ DB_DATABASE=argentum
 DB_USERNAME=root
 DB_PASSWORD=
 
-CACHE_DRIVER=memcached
+CACHE_DRIVER=array
+SESSION_DRIVER=array
 QUEUE_DRIVER=sync
