--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "bower-asset/normalize.css": "^5.0",
         "symfony/process": "^3.1",
         "laravelista/lumen-vendor-publish": "^2.0",
-        "tymon/jwt-auth": "^1.0@dev"
+        "tymon/jwt-auth": "^1.0@dev",
+        "phpspec/phpspec": "^3.1"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
