--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
     "babel-core": "^6.18.2",
     "babel-plugin-transform-runtime": "^6.15.0",
     "babel-preset-es2015": "^6.18.0",
+    "babelify": "^7.3.0",
     "browserify": "^13.1.1",
     "bulma": "^0.2.3",
+    "vee-validate": "^2.0.0-beta.13",
     "vue": "^2.0.3",
     "vue-resource": "^1.0.3",
     "vue-router": "^2.0.1",
     "vueify": "^9.2.4",
-    "vuex": "^2.0.0"
+    "vuex": "^2.0.0",
+    "vuex-router-sync": "^3.0.0"
   }
 }
