--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,5 @@
 {
-    "name": "laravel/laravel",
-    "description": "The Laravel Framework.",
-    "keywords": ["framework", "laravel"],
+    "name": "fridaylabs/argentum",
     "license": "MIT",
     "type": "project",
     "repositories": [
