--- a/modules/Admin/package.json
+++ b/modules/Admin/package.json
@@ -9,12 +9,16 @@
     "laravel-elixir": "^6.0.0-14",
     "laravel-elixir-vue-2": "^0.2.0",
     "laravel-elixir-webpack-official": "^1.0.2",
+    "vee-validate": "^2.0.0-beta.13",
     "vue": "^2.0.1",
     "vue-resource": "^1.0.3",
+    "vue-router": "^2.0.1",
     "vueify": "^9.2.4",
     "vuex": "^2.0.0",
-    "vue-router": "^2.0.1",
-    "vuex-router-sync": "^3.0.0",
-    "vee-validate": "^2.0.0-beta.13"
+    "vuex-router-sync": "^3.0.0"
+  },
+  "dependencies": {
+    "@websanova/vue-auth": "^1.5.1-beta",
+    "vuex-actions": "^1.1.1"
   }
 }
